fix(jmtoolbar): visibility-height

--- a/src/component/jmtoolbar/jmtoolbar.scss
+++ b/src/component/jmtoolbar/jmtoolbar.scss
@@ -101,6 +101,7 @@
       color: #fff;
       background: #6e6e6e;
       z-index: 0;
+      text-decoration: none;
       &:before {
         content: "";
         position: absolute;
